--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
         }
     </script>
     <br>
-    <textarea>Hello</textarea>
+    <div id="proposal" class="question">Get Ready</div>
+    <input type="text" id="response" class="answer">
+    <script>
+        document.getElementById('proposal').innerText = "";
+        document.getElementById('response').value = "";
+    </script>
 </body>
 </html>
