--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <link rel = "stylesheet" type = "text/css" href = "stylesheet.css">
+    <script type="text/javascript" src="index.js"></script>
 </head>
 <body>
     <script type="text/javascript" src="ismobile.js"></script>
@@ -12,12 +13,133 @@
             window.location.href = "mobile.html";
         }
     </script>
-    <br>
     <div id="proposal" class="question">Get Ready</div>
-    <input type="text" id="response" class="answer">
+    <div id="instructions"></div>
+    <input type="text" id="response" class="answer" autofocus>
+    <div id="timer" class="indicator">⏰ 0 🏆 0</div>
+    <br><br>
+        Binary:<input id="binary" type="checkbox" name="binary" checked><br>
+        Hexadecimal:<input id="hexadecimal"  type="checkbox" name="hexadecimal" checked><br>
+    <br>
+    <input id="slider" type="range" min="1" max="8" value="4" oninput="adjustSlider(); return false;">
+    <div id="rangeValue"></div>
+    <br>
+    <input id="timeSlider" type="range" min="4" max="32" value="32" oninput="adjustTimeSlider(); return false;">
+    <div id="timeLimit"></div>
     <script>
         document.getElementById('proposal').innerText = "";
         document.getElementById('response').value = "";
+        document.getElementById('binary').checked = true;
+        document.getElementById('hexadecimal').checked = true;
+        adjustSlider();
+        adjustTimeSlider();
+    </script>
+    <script>
+        // Variables
+        let t = 0;
+        let streak = 0;
+        // let binary = document.getElementById('binary').value;
+        // let hexadecimal = document.getElementById('hexadecimal').value;
+        // let bits = document.getElementById('slider').value;
+        // let interval = document.getElementById('timeSlider').value;
+
+        // Timer
+        var timerID = window.setInterval(updateTimer, 1000);
+
+        function updateTimer() {
+            if (t >= document.getElementById('timeSlider').value) {
+                t = 0;
+                streak = 0;
+                generateBase()
+            }
+            document.getElementById('timer').innerText = "⏰ " + t + " 🏆 " + streak;
+            t++;
+        }
+
+        // Response Submission
+
+        function solve(problem, instructions) {
+            return "123"
+        }
+
+        function submitResponse() {
+            let problem = document.getElementById('proposal').innerText;
+            let instructions = document.getElementById('instructions').innerText;
+            let solution = solve(problem, instructions);
+            if (document.getElementById('response').value == solution) {
+                document.getElementById('instructions').style.color="black";
+                document.getElementById('response').value="";
+                streak++;
+                t = 0; updateTimer();
+            } else {
+                document.getElementById('instructions').style.color="red";
+            }
+        }
+
+        // Generating Numbers
+        generateBase();
+
+        function generateBase() {
+            let n = Math.floor(Math.random() * Math.pow(2, document.getElementById('slider').value));
+            console.log(n);
+            let binaryOn = false;
+            if (document.getElementById('binary').checked) {binaryOn = true};
+            let hexOn = false;
+            if (document.getElementById('hexadecimal').checked) {hexOn = true};
+            console.log(binaryOn + " " + hexOn)
+            console.log(document.getElementById('binary').value)
+            if (binaryOn || hexOn) {
+                var max, min, prop;
+                if (binaryOn && hexOn) { max = 6; min = 0; }
+                else if (binaryOn && !hexOn) { max = 2; min = 0; }
+                else { max = 6; min = 4; }
+                let choice = Math.floor(Math.random() * (max - min) + min)
+                // Binary to Decimal
+                if (choice == 0) {
+                    prop = n.toString(2).padStart(document.getElementById('slider').value, '0');
+                    document.getElementById('instructions').innerText = "Binary → Decimal"
+                }
+                // Decimal to Binary
+                else if (choice == 1) {
+                    prop = n;
+                    document.getElementById('instructions').innerText = "Decimal → Binary"
+                }
+                // Binary to Hex
+                else if (choice == 2) {
+                    prop = n.toString(2).padStart(document.getElementById('slider').value, '0');
+                    document.getElementById('instructions').innerText = "Binary → Hex"
+                }
+                // Hex to Binary
+                else if (choice == 3) {
+                    prop = n.toString(16).toUpperCase();
+                    document.getElementById('instructions').innerText = "Hex → Binary"
+                }
+                // Decimal to Hex
+                else if (choice == 4) {
+                    prop = n;
+                    document.getElementById('instructions').innerText = "Decimal → Hex"
+                }
+                // Hex to Decimal
+                else if (choice == 5) {
+                    prop = n.toString(16).toUpperCase();
+                    document.getElementById('instructions').innerText = "Hex → Decimal"
+                }
+                document.getElementById('proposal').innerText = prop;
+                console.log("CHOICE" + choice);
+            } else {
+                document.getElementById('proposal').innerText = "???";
+                document.getElementById('instructions').innerText = "Choose Binary or Hex!"
+            }
+            document.getElementById('instructions').style.color="black";
+        }
+
+    </script>
+    <script>
+        document.getElementById("response").onkeyup = function(e) {
+            if (e.which == 13) {
+                submitResponse();
+            }
+        }
     </script>
 </body>
 </html>
