reformatted mobile css

--- a/mobile.html
+++ b/mobile.html
@@ -11,8 +11,10 @@
     <div id="instructions"></div>
     <input type="text" id="response" class="answer" autofocus>
     <div id="timer" class="indicator">⏰ 0 🏆 0</div>
-        Binary:<input id="binary" type="checkbox" name="binary" checked><br>
-        Hexadecimal:<input id="hexadecimal"  type="checkbox" name="hexadecimal" checked><br>
+    <div style="margin-top: 5vh;"></div>
+    Binary:<input id="binary" type="checkbox" name="binary" checked><br>
+    Hexadecimal:<input id="hexadecimal"  type="checkbox" name="hexadecimal" checked><br>
+    <div style="margin-top: 5vh;"></div>
     <input id="slider" type="range" min="1" max="8" value="4" oninput="adjustSlider(); reset(); return false;">
     <div id="rangeValue"></div>
     <input id="timeSlider" type="range" min="4" max="32" value="32" oninput="adjustTimeSlider(); reset(); return false;">
