reformatting mobile css #2

--- a/mobile.html
+++ b/mobile.html
@@ -7,7 +7,7 @@
     <script type="text/javascript" src="index.js"></script>
 </head>
 <body>
-    <div id="proposal" class="question">Get Ready</div>
+    <div style="margin-top: 5vh; "id="proposal" class="question">Get Ready</div>
     <div id="instructions"></div>
     <input type="text" id="response" class="answer" autofocus>
     <div id="timer" class="indicator">⏰ 0 🏆 0</div>
