--- a/mobile.html
+++ b/mobile.html
@@ -36,7 +36,6 @@
         // let bits = document.getElementById('slider').value;
         // let interval = document.getElementById('timeSlider').value;
 
-
         // Reset
         function reset() {
             t = 0;
@@ -45,9 +44,19 @@
             updateTimer();
         }
 
+        // Reset if checkboxes changed
+        let bin = document.getElementById('binary');
+        bin.addEventListener('change', (event) => {
+            reset();
+        })
+        let hex = document.getElementById('hexadecimal');
+        hex.addEventListener('change', (event) => {
+            reset();
+        })
+
+
         // Timer
         var timerID = window.setInterval(updateTimer, 1000);
-
         function updateTimer() {
             if (t >= document.getElementById('timeSlider').value) {
                 t = 0;
@@ -59,36 +68,18 @@
         }
 
         // Response Submission
-
-        function solve(problem, instructions) {
-            var n;
-            if (instructions == "Binary → Decimal") {
-                n = Number("0b" + problem);
-                return n.toString(10)
-            } else if (instructions == "Decimal → Binary") {
-                return Number(problem).toString(2);
-            } else if (instructions == "Binary → Hex") {
-                n = Number("0b" + problem);
-                return n.toString(16).toUpperCase();
-            } else if (instructions == "Hex → Binary") {
-                n = Number("0x" + problem);
-                return n.toString(2);
-            } else if (instructions == "Decimal → Hex") {
-                console.log(problem)
-                return Number(problem).toString(16).toUpperCase();
-            } else if (instructions == "Hex → Decimal") {
-                n = Number("0x" + problem);
-                return n.toString(10);
-            } 
-            return -1;
+        document.getElementById("response").onkeyup = function(e) {
+            if (e.which == 13) {
+                submitResponse();
+            }
         }
-
         function submitResponse() {
             let problem = document.getElementById('proposal').innerText;
             let instructions = document.getElementById('instructions').innerText;
             let solution = solve(problem, instructions);
+            let response = document.getElementById('response').value
             console.log(solution)
-            if (document.getElementById('response').value.toUpperCase() == solution) {
+            if (response.toUpperCase() == solution || response.toUpperCase() == solution.padStart(document.getElementById('slider').value, '0')) {
                 document.getElementById('response').value="";
                 streak++;
                 t = 0; updateTimer();
@@ -99,71 +90,9 @@
             }
         }
 
-        // Generating Numbers
+        // Generating the first number
         generateBase();
 
-        function generateBase() {
-            let n = Math.floor(Math.random() * Math.pow(2, document.getElementById('slider').value));
-            console.log(n);
-            let binaryOn = false;
-            if (document.getElementById('binary').checked) {binaryOn = true};
-            let hexOn = false;
-            if (document.getElementById('hexadecimal').checked) {hexOn = true};
-            console.log(binaryOn + " " + hexOn)
-            console.log(document.getElementById('binary').value)
-            if (binaryOn || hexOn) {
-                var max, min, prop;
-                if (binaryOn && hexOn) { max = 6; min = 0; }
-                else if (binaryOn && !hexOn) { max = 2; min = 0; }
-                else { max = 6; min = 4; }
-                let choice = Math.floor(Math.random() * (max - min) + min)
-                // Binary to Decimal
-                if (choice == 0) {
-                    prop = n.toString(2).padStart(document.getElementById('slider').value, '0');
-                    document.getElementById('instructions').innerText = "Binary → Decimal"
-                }
-                // Decimal to Binary
-                else if (choice == 1) {
-                    prop = n;
-                    document.getElementById('instructions').innerText = "Decimal → Binary"
-                }
-                // Binary to Hex
-                else if (choice == 2) {
-                    prop = n.toString(2).padStart(document.getElementById('slider').value, '0');
-                    document.getElementById('instructions').innerText = "Binary → Hex"
-                }
-                // Hex to Binary
-                else if (choice == 3) {
-                    prop = n.toString(16).toUpperCase();
-                    document.getElementById('instructions').innerText = "Hex → Binary"
-                }
-                // Decimal to Hex
-                else if (choice == 4) {
-                    prop = n;
-                    document.getElementById('instructions').innerText = "Decimal → Hex"
-                }
-                // Hex to Decimal
-                else if (choice == 5) {
-                    prop = n.toString(16).toUpperCase();
-                    document.getElementById('instructions').innerText = "Hex → Decimal"
-                }
-                document.getElementById('proposal').innerText = prop;
-                console.log("CHOICE" + choice);
-            } else {
-                document.getElementById('proposal').innerText = "???";
-                document.getElementById('instructions').innerText = "Choose Binary or Hex!"
-            }
-            document.getElementById('proposal').style.color="black";
-            document.getElementById('instructions').style.color="black";
-        }
-
-    </script>
-    <script>
-        document.getElementById("response").onkeyup = function(e) {
-            if (e.which == 13) {
-                submitResponse();
-            }
-        }
     </script>
 </body>
 </html>
