--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     </script>
     <div id="proposal" class="question">Get Ready</div>
     <div id="instructions"></div>
+    <div id="hints" class="hints"></div>
     <input type="text" id="response" class="answer" autofocus>
     <div id="timer" class="indicator">⏰ 0 🏆 0</div>
     <br><br>
@@ -26,11 +27,14 @@
     <br>
     <input id="timeSlider" type="range" min="4" max="32" value="32" oninput="adjustTimeSlider(); reset(); return false;">
     <div id="timeLimit"></div>
+    <br><br>
+    Show Hints:<input id="hintcheckbox"  type="checkbox" name="hintcheckbox">
     <script>
         document.getElementById('proposal').innerText = "";
         document.getElementById('response').value = "";
         document.getElementById('binary').checked = true;
         document.getElementById('hexadecimal').checked = true;
+        document.getElementById('hintcheckbox').checked = false;
         adjustSlider();
         adjustTimeSlider();
     </script>
@@ -58,6 +62,15 @@
         })
         let hex = document.getElementById('hexadecimal');
         hex.addEventListener('change', (event) => {
+            reset();
+        })
+        let hintcheckbox = document.getElementById('hintcheckbox');
+        hintcheckbox.addEventListener('change', (event) => {
+            if (document.getElementById('hintcheckbox').checked) {
+                document.getElementById('response').style="margin-top: 2vh";
+            } else {
+                document.getElementById('response').style="margin-top: 5vh";
+            }
             reset();
         })
 
